removed align-content on contentWrapper to improve design when no data is found

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -160,12 +160,14 @@ button.active {
 
     display: flex;
     justify-content: center;
-    align-content: center;
+    // align-content: center;
     flex-wrap: wrap;
 }
 
 .filterWrapper {
+    height: 50px;
     width: 80%;
+
     display: flex;
     flex-wrap: nowrap;
     justify-content: center;
