--- a/src/app/views/create-user/create-user.component.html
+++ b/src/app/views/create-user/create-user.component.html
@@ -1,4 +1,4 @@
-<div class="login-wrapper" (keydown.enter)="createUser()">
+<div class="auth-wrapper" (keydown.enter)="createUser()">
     <div class="flex-item" id="top-text"> <span>Account erstellen</span> </div>
 
     <div class="flex-item"> <label for="userName">Benutzername</label> </div>
@@ -9,7 +9,7 @@
 
     <div class="flex-itemHalf actionButtons"> <button class="cancelButton"
             (click)="routeTo('/login')">Abbrechen</button> </div>
-    <div class="flex-itemHalf actionButtons"> <button class="createAccountButton" (click)="createUser()">Account
+    <div class="flex-itemHalf actionButtons"> <button class="saveButton" (click)="createUser()">Account
             Erstellen</button> </div>
 
 </div>
