--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="navigation">
 
     <div id="navigationLeft">
-        <span id="title">{{ title }}</span>
+        <span>{{ title }}</span>
     </div>
 
     <div class="navigationRight" *ngIf="this.authService.loggedIn">
