--- a/src/app/views/devices/devices.component.html
+++ b/src/app/views/devices/devices.component.html
@@ -26,54 +26,54 @@
                             </div>
 
                             <div class="body-label">
-                                <label [attr.for]="'label' + i" class="bodyInputLabel">Label</label>
+                                <label [attr.for]="'label' + i" class="bodyInputLabel">Name</label>
                                 <input type="text" [attr.id]="'label' + i" class="input" [(ngModel)]="device.Label">
                             </div>
 
                             <div class="body-desciptiveInformation">
                                 <label [attr.for]="'descriptiveInformation' + i"
-                                    class="bodyInputLabel">DescriptiveInformation</label>
+                                    class="bodyInputLabel">Beschreibung</label>
                                 <input type="text" [attr.id]="'descriptiveInformation' + i" class="input"
                                     [(ngModel)]="device.DescriptiveInformation">
                             </div>
 
                             <div class="body-serialNumber">
-                                <label [attr.for]="'serialNumber' + i" class="bodyInputLabel">SerialNumber</label>
+                                <label [attr.for]="'serialNumber' + i" class="bodyInputLabel">Seriennummer</label>
                                 <input type="text" [attr.id]="'serialNumber' + i" class="input"
                                     [(ngModel)]="device.SerialNumber">
                             </div>
 
                             <div class="body-manufacturer">
-                                <label [attr.for]="'manufacturer' + i" class="bodyInputLabel">Manufacturer</label>
+                                <label [attr.for]="'manufacturer' + i" class="bodyInputLabel">Hersteller</label>
                                 <input type="text" [attr.id]="'manufacturer' + i" class="input"
                                     [(ngModel)]="device.Manufacturer">
                             </div>
 
                             <div class="body-manufacturer">
-                                <label [attr.for]="'model' + i" class="bodyInputLabel">Model</label>
+                                <label [attr.for]="'model' + i" class="bodyInputLabel">Modell</label>
                                 <input type="text" [attr.id]="'model' + i" class="input" [(ngModel)]="device.Model">
                             </div>
 
                             <div class="body-rentStart">
-                                <label [attr.for]="'rentStart' + i" class="bodyInputLabel">RentStart</label>
+                                <label [attr.for]="'rentStart' + i" class="bodyInputLabel">Verleihstart</label>
                                 <input type="date" [attr.id]="'rentStart' + i" class="input"
                                     [(ngModel)]="device.RentStart">
                             </div>
 
                             <div class="body-expectedReturn">
-                                <label [attr.for]="'expectedReturn' + i" class="bodyInputLabel">ExpectedReturn</label>
+                                <label [attr.for]="'expectedReturn' + i" class="bodyInputLabel">Verleihende</label>
                                 <input type="date" [attr.id]="'expectedReturn' + i" class="input"
                                     [(ngModel)]="device.ExpectedReturn">
                             </div>
 
                             <div class="body-locationID">
-                                <label [attr.for]="'locationID' + i" class="bodyInputLabel">LocationID</label>
+                                <label [attr.for]="'locationID' + i" class="bodyInputLabel">Standort</label>
                                 <input type="text" [attr.id]="'locationID' + i" class="input"
                                     [(ngModel)]="device.LocationID">
                             </div>
 
                             <div class="body-personID">
-                                <label [attr.for]="'personID' + i" class="bodyInputLabel">PersonID</label>
+                                <label [attr.for]="'personID' + i" class="bodyInputLabel">Person</label>
                                 <input type="text" [attr.id]="'personID' + i" class="input"
                                     [(ngModel)]="device.PersonID">
                             </div>
@@ -99,48 +99,48 @@
         <h2>Neues Gerät erstellen</h2>
         <div class="contentBody">
             <div>
-                <label for="label" class="bodyInputLabel">Label</label>
+                <label for="label" class="bodyInputLabel">Name</label>
                 <input type="text" id="label" class="input" [(ngModel)]="newDevice.Label">
             </div>
 
             <div>
-                <label for="descriptiveInformation" class="bodyInputLabel">DescriptiveInformation</label>
+                <label for="descriptiveInformation" class="bodyInputLabel">Beschreibung</label>
                 <input type="text" id="descriptiveInformation" class="input"
                     [(ngModel)]="newDevice.DescriptiveInformation">
             </div>
 
             <div>
-                <label for="serialNumber" class="bodyInputLabel">SerialNumber</label>
+                <label for="serialNumber" class="bodyInputLabel">Seriennummer</label>
                 <input type="text" id="serialNumber" class="input" [(ngModel)]="newDevice.SerialNumber">
             </div>
 
             <div>
-                <label for="manufacturer" class="bodyInputLabel">Manufacturer</label>
+                <label for="manufacturer" class="bodyInputLabel">Hersteller</label>
                 <input type="text" id="manufacturer" class="input" [(ngModel)]="newDevice.Manufacturer">
             </div>
 
             <div>
-                <label for="model" class="bodyInputLabel">Model</label>
+                <label for="model" class="bodyInputLabel">Modell</label>
                 <input type="text" id="model" class="input" [(ngModel)]="newDevice.Model">
             </div>
 
             <div>
-                <label for="rentStart" class="bodyInputLabel">RentStart</label>
+                <label for="rentStart" class="bodyInputLabel">Verleihstart</label>
                 <input type="date" id="rentStart" class="input" [(ngModel)]="newDevice.RentStart">
             </div>
 
             <div>
-                <label for="expectedReturn" class="bodyInputLabel">ExpectedReturn</label>
+                <label for="expectedReturn" class="bodyInputLabel">Verleihende</label>
                 <input type="date" id="expectedReturn" class="input" [(ngModel)]="newDevice.ExpectedReturn">
             </div>
 
             <div>
-                <label for="locationID" class="bodyInputLabel">LocationID</label>
+                <label for="locationID" class="bodyInputLabel">Standort</label>
                 <input type="text" id="locationID" class="input" [(ngModel)]="newDevice.LocationID">
             </div>
 
             <div>
-                <label for="personID" class="bodyInputLabel">PersonID</label>
+                <label for="personID" class="bodyInputLabel">Person</label>
                 <input type="text" id="personID" class="input" [(ngModel)]="newDevice.PersonID">
             </div>
 
