--- a/src/app/views/persons/persons.component.html
+++ b/src/app/views/persons/persons.component.html
@@ -32,7 +32,7 @@
                             </div>
 
                             <div>
-                                <label [attr.for]="'lastName' + i" class="bodyInputLabel">Informationen</label>
+                                <label [attr.for]="'lastName' + i" class="bodyInputLabel">Nachnamen</label>
                                 <input type="text" [attr.id]="'lastName' + i" class="input"
                                     [(ngModel)]="person.LastName">
                             </div>
@@ -68,7 +68,7 @@
             </div>
 
             <div>
-                <label for="lastName" class="bodyInputLabel">Name</label>
+                <label for="lastName" class="bodyInputLabel">Vorname</label>
                 <input type="text" id="lastName" class="input" [(ngModel)]="newPerson.LastName">
             </div>
 
