--- a/src/app/views/locations/locations.component.html
+++ b/src/app/views/locations/locations.component.html
@@ -33,13 +33,9 @@
 
                             <div>
                                 <label [attr.for]="'descriptiveInformation' + i"
-                                    class="bodyInputLabel">Informationen</label>
+                                    class="bodyInputLabel">Beschreibung</label>
                                 <input type="text" [attr.id]="'descriptiveInformation' + i" class="input"
                                     [(ngModel)]="location.DescriptiveInformation">
-                            </div>
-
-                            <div>
-                                <h3>Adresse</h3>
                             </div>
 
                             <div>
@@ -79,18 +75,14 @@
         <h2>Neuen Standort erstellen</h2>
         <div class="contentBody">
             <div>
-                <label for="label" class="bodyInputLabel">Label</label>
+                <label for="label" class="bodyInputLabel">Name</label>
                 <input type="text" id="label" class="input" [(ngModel)]="newLocation.Label">
             </div>
 
             <div>
-                <label for="descriptiveInformation" class="bodyInputLabel">Informationen</label>
+                <label for="descriptiveInformation" class="bodyInputLabel">Beschreibung</label>
                 <input type="text" id="descriptiveInformation" class="input"
                     [(ngModel)]="newLocation.DescriptiveInformation">
-            </div>
-
-            <div>
-                <h3>Adresse</h3>
             </div>
 
             <div>
