--- a/src/app/views/devices/devices.component.html
+++ b/src/app/views/devices/devices.component.html
@@ -68,14 +68,24 @@
 
                             <div class="body-locationID">
                                 <label [attr.for]="'locationID' + i" class="bodyInputLabel">Standort</label>
-                                <input type="text" [attr.id]="'locationID' + i" class="input"
-                                    [(ngModel)]="device.LocationID">
+                                <input type="text" [attr.list]="'locations' + i" [attr.id]="'locationID' + i"
+                                    class="input" [(ngModel)]="device.LocationID">
+                                <datalist [attr.id]="'locations' + i">
+                                    <option *ngFor="let location of filteredLocationList" [value]="location.ID">
+                                        {{ location.Label }}
+                                    </option>
+                                </datalist>
                             </div>
 
                             <div class="body-personID">
                                 <label [attr.for]="'personID' + i" class="bodyInputLabel">Person</label>
-                                <input type="text" [attr.id]="'personID' + i" class="input"
+                                <input type="text" [attr.list]="'persons' + i" [attr.id]="'personID' + i" class="input"
                                     [(ngModel)]="device.PersonID">
+                                <datalist [attr.id]="'persons' + i">
+                                    <option *ngFor="let person of filteredPersonList" [value]="person.ID">
+                                        {{ person.FirstName + ', ' + person.LastName }}
+                                    </option>
+                                </datalist>
                             </div>
 
                             <div class="bodyActions">
@@ -136,12 +146,22 @@
 
             <div>
                 <label for="locationID" class="bodyInputLabel">Standort</label>
-                <input type="text" id="locationID" class="input" [(ngModel)]="newDevice.LocationID">
+                <input type="text" list="locations" id="locationID" class="input" [(ngModel)]="newDevice.LocationID">
+                <datalist id="locations">
+                    <option *ngFor="let location of filteredLocationList" [value]="location.ID">
+                        {{ location.Label }}
+                    </option>
+                </datalist>
             </div>
 
             <div>
                 <label for="personID" class="bodyInputLabel">Person</label>
-                <input type="text" id="personID" class="input" [(ngModel)]="newDevice.PersonID">
+                <input type="text" list="persons" id="personID" class="input" [(ngModel)]="newDevice.PersonID">
+                <datalist id="persons">
+                    <option *ngFor="let person of filteredPersonList" [value]="person.ID">
+                        {{ person.FirstName + ', ' + person.LastName }}
+                    </option>
+                </datalist>
             </div>
 
             <div class="bodyActions">
