--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,58 +1,6 @@
-$primary-100: #d6faff;
-$primary-200: #adf1ff;
-$primary-300: #84e3ff;
-$primary-400: #66d2ff;
-$primary-500: #33b7ff;
-$primary-600: #258fdb;
-$primary-700: #196cb7;
-$primary-800: #104c93;
-$primary-900: #09367a;
-
-$success-100: #d7fbd1;
-$success-200: #a9f8a5;
-$success-300: #76ec7b;
-$success-400: #51d965;
-$success-500: #20c147;
-$success-600: #17a547;
-$success-700: #108a45;
-$success-800: #0a6f40;
-$success-900: #065c3c;
-
-$info-100: #f5f5f5;
-$info-200: #eeeeee;
-$info-300: #e0e0e0;
-$info-400: #bdbdbd;
-$info-500: #9e9e9e;
-$info-600: #757575;
-$info-700: #616161;
-$info-800: #424242;
-$info-900: #212121;
-
-$warning-100: #fefdd0;
-$warning-200: #fdfaa3;
-$warning-300: #fbf674;
-$warning-400: #f8f051;
-$warning-500: #f4e91a;
-$warning-600: #d1c713;
-$warning-700: #afa50d;
-$warning-800: #8d8408;
-$warning-900: #756d04;
-
-$danger-100: #ffe6d9;
-$danger-200: #ffc6b4;
-$danger-300: #ffa08e;
-$danger-400: #ff7c72;
-$danger-500: #ff4447;
-$danger-600: #db3143;
-$danger-700: #b7223e;
-$danger-800: #931538;
-$danger-900: #7a0d35;
-
-// nice color, may be used sometime
-// $testing: #42f0a2;
+@import "./assets/variables.scss";
 
 body {
-    background-color: $primary-100;
     font-family: Arial, sans-serif;
     overflow: hidden;
     margin: 0;
@@ -60,10 +8,10 @@ body {
 
 input {
     padding: 0 15px;
-    background-color: $info-200;
-    border: 2px solid #80b6cf;
+    background-color: $input_backgroundColor;
+    border: 2px solid $input_borderColor;
     border-radius: 5px;
-    box-shadow: 0 0 2px #7e9dac inset;
+    box-shadow: 0 0 2px $input_boxShadow inset;
     width: 100%;
     height: 100%;
     border-radius: 5px;
@@ -71,7 +19,7 @@ input {
 }
 
 input:focus {
-    box-shadow: 0 0 5px #7e9dac inset;
+    box-shadow: 0 0 5px $input_boxShadow inset;
     outline: none;
 }
 
@@ -115,19 +63,19 @@ button.active {
 }
 
 .createNewButton {
-    background-color: #679bb3;
+    background-color: $buttonGeneral_background;
 }
 .createNewButton:hover {
-    background-color: #588397;
-    box-shadow: -0px -0px 50px #679bb3 inset;
+    background-color: $buttonGeneral_backgroundHover;
+    box-shadow: -0px -0px 50px $buttonGeneral_shadow inset;
 }
 
 .cancelButton {
-    background-color: hsl(0, 0%, 73%);
+    background-color: $buttonCancel_background;
 }
 .cancelButton:hover {
-    background-color: hsl(0, 0%, 62%);
-    box-shadow: -0px -0px 50px hsl(0, 0%, 83%) inset;
+    background-color: $buttonCancel_backgroundHover;
+    box-shadow: -0px -0px 50px $buttonCancel_shadow inset;
 }
 
 #cancelButton {
@@ -135,11 +83,11 @@ button.active {
 }
 
 .deleteButton {
-    background-color: #f28260;
+    background-color: $buttonDelete_background;
 }
 .deleteButton:hover {
-    background-color: #ca6d51;
-    box-shadow: -0px -0px 50px #ff8864 inset;
+    background-color: $buttonDelete_backgroundHover;
+    box-shadow: -0px -0px 50px $buttonDelete_shadow inset;
 }
 
 #deleteButton {
@@ -147,11 +95,11 @@ button.active {
 }
 
 .saveButton {
-    background-color: #7be9d6;
+    background-color: $buttonSave_background;
 }
 .saveButton:hover {
-    background-color: #61b8a9;
-    box-shadow: -0px -0px 50px #87ffeb inset;
+    background-color: $buttonSave_backgroundHover;
+    box-shadow: -0px -0px 50px $buttonSave_shadow inset;
 }
 
 #saveButton {
@@ -172,7 +120,7 @@ button.active {
 
 .auth-wrapper {
     padding: 20px;
-    background-color: #636e74;
+    background-color: $content_background;
     width: 400px;
     border-radius: 3px;
     display: flex;
@@ -183,14 +131,11 @@ button.active {
 
 .contentWrapper {
     padding: 2vh 4vw;
-    background-color: #636e74;
-
+    background-color: $content_background;
     height: 85vh;
     width: 70vw;
     max-width: 90vw;
-
     border-radius: 3px;
-
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
@@ -199,7 +144,6 @@ button.active {
 .filterWrapper {
     height: 50px;
     width: 80%;
-
     display: flex;
     flex-wrap: nowrap;
     justify-content: center;
@@ -214,22 +158,22 @@ button.active {
 }
 
 .scrollWrapper::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 6px #636e74;
-    -webkit-box-shadow: inset 0 0 6px #84939b;
+    box-shadow: inset 0 0 6px $scrollbarTrack_shadow;
+    -webkit-box-shadow: inset 0 0 6px $scrollbarTrack_shadow;
     border-radius: 4px;
-    background-color: #6f7b81;
+    background-color: $scrollbarTrack_background;
 }
 
 .scrollWrapper::-webkit-scrollbar {
     width: 12px;
-    background-color: #636e74;
+    background-color: $scrollbar_background;
 }
 
 .scrollWrapper::-webkit-scrollbar-thumb {
-    box-shadow: inset 0 0 6px #5a6f79;
-    -webkit-box-shadow: inset 0 0 6px #5a6f79;
+    box-shadow: inset 0 0 6px $scrollbarThumb_shadow;
+    -webkit-box-shadow: inset 0 0 6px $scrollbarThumb_shadow;
     border-radius: 4px;
-    background-color: #81a6b8;
+    background-color: $scrollbarThumb_background;
 }
 
 .collapsibleToggle {
@@ -246,8 +190,8 @@ button.active {
     overflow: hidden;
     cursor: pointer;
     border-radius: 5px 5px 0px 0px;
-    background-color: #4f7181;
-    box-shadow: 0px 0px 35px #7aaac1 inset;
+    background-color: $header_background;
+    box-shadow: 0px 0px 35px $header_shadow inset;
     font-weight: bold;
     font-family: monospace;
     font-size: 1.2rem;
@@ -292,18 +236,9 @@ button.active {
     max-height: 5px;
     overflow: hidden;
     transition: max-height 0.5s;
-
-    background-color: $info-100;
-    border-bottom: 1px solid $info-400;
+    background-color: $content_background;
+    border-bottom: 1px solid $content-border;
     border-radius: 0px 0px 5px 5px;
-}
-
-.contentTitle {
-    font-size: 18pt;
-    border-bottom: 1px solid black;
-    padding: 10px 0;
-    margin: 5px 10%;
-    text-align: center;
 }
 
 .contentBody {
@@ -319,7 +254,6 @@ button.active {
     flex-wrap: nowrap;
     justify-content: center;
     align-items: center;
-
     width: 100%;
 }
 
@@ -370,8 +304,6 @@ button.active {
 
 .popup h2 {
     margin-top: 0;
-    color: #333;
-    font-family: Tahoma, Arial, sans-serif;
 }
 
 #cancelButtonPOPUP {
